--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "saul wiggin",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
